--- a/.github/chainguard/build.sts.yaml
+++ b/.github/chainguard/build.sts.yaml
@@ -1,5 +1,5 @@
 issuer: https://token.actions.githubusercontent.com
-subject: repo:chainguard-dev/tj-scan:ref:refs/heads/main
+subject_pattern: repo:chainguard-dev\/tj-scan:(ref:refs\/heads\/main|pull_request)
 claim_pattern:
   job_workflow_ref: chainguard-dev/tj-scan/.github/workflows/build.yaml@.*
 
