--- a/config.yaml
+++ b/config.yaml
@@ -13,5 +13,5 @@ ioc:
 # custom example
 # ioc:
 #  name: "custom-ioc-name"
-#  digest: "0e58ed8671d6b60d0890c21b07f8835ace038e67"
+#  content: "0e58ed8671d6b60d0890c21b07f8835ace038e67,example-string,example-string2"
 #  pattern: "(?:^|\\s+)([A-Za-z0-9+/]{40,}={0,3})"
