Rename to ghscan to reflect more generic scanning support
Signed-off-by: egibs <20933572+egibs@users.noreply.github.com>

--- a/.github/chainguard/build.sts.yaml
+++ b/.github/chainguard/build.sts.yaml
@@ -1,7 +1,7 @@
 issuer: https://token.actions.githubusercontent.com
-subject_pattern: repo:chainguard-dev\/tj-scan:(ref:refs\/heads\/main|pull_request)
+subject_pattern: repo:chainguard-dev/ghscan:(ref:refs/heads/main|pull_request)
 claim_pattern:
-  job_workflow_ref: chainguard-dev/tj-scan/.github/workflows/build.yaml@.*
+  job_workflow_ref: chainguard-dev/ghscan/.github/workflows/build.yaml@.*
 
 permissions:
   contents: read
